[package]
name = "arnelify_broker"
description = "Broker with RPC and UMQT support."
keywords = ["arnelify", "broker", "datagrams", "tcp2"]
version = "0.9.7"
authors = ["Arnelify", "Taron Sarkisyan"]
license = "MIT"
repository = "http://github.com/arnelify/arnelify-broker-rust"
edition = "2024"

[lib]
name = "arnelify_broker"
crate-type = ["rlib", "cdylib"]

[dependencies]
brotli = "8.0.2"
libloading = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3